fix z-index issue with navbar and collapse

--- a/static/scpc/scss/modules/_variables.scss
+++ b/static/scpc/scss/modules/_variables.scss
@@ -102,5 +102,6 @@ $zindex-hero-image: 0;
 $zindex-hero-overlay: 10;
 $zindex-hero-title: 20;
 $zindex-navbar: 30;
+$zindex-navbar-brand: 35;
 
 
